removed version pinning for pip lib, added unzip step

--- a/src/pages/cookbook/jupyter-notebook.mdx
+++ b/src/pages/cookbook/jupyter-notebook.mdx
@@ -17,7 +17,7 @@ Run Moondream in a Jupyter notebook or Google Colab environment with Google Driv
 
 ```python
 # Install specific version of moondream
-!pip install moondream==0.0.4
+!pip install moondream
 print("✅ Moondream installed successfully!")
 
 # Mount Google Drive
