--- a/src/pages/local-deployment/caption.mdx
+++ b/src/pages/local-deployment/caption.mdx
@@ -4,21 +4,23 @@ Generate natural language descriptions of images with Moondream.
 
 ## Installation & Model
 
-```bash filename="terminal"
-pip install moondream==0.0.4
-```
+~~~bash filename="terminal"
+pip install moondream
+~~~
 
-Download the model from our [Model Downloads](/model-downloads) page.
+Download the model from our [Model Downloads](/model-downloads) page. While compressed models can be loaded directly, we recommend unzipping them first for faster loading times.
 
 ## Basic Usage
 
-```python filename="example.py"
+~~~python filename="example.py"
 from moondream import vl
-model = vl("models/moondream-2b-int8.bin.gz")
+
+# Load unzipped model for faster startup
+model = vl("models/moondream-0.5b-int8.bin")
 
 caption = model.caption(image)
 print(caption)
-```
+~~~
 
 That's all you need to start generating image captions!
 
