--- a/src/pages/local-deployment/point.mdx
+++ b/src/pages/local-deployment/point.mdx
@@ -4,17 +4,19 @@ Get precise coordinate locations for objects in images using Moondream.
 
 ## Installation & Model
 
-```bash filename="terminal"
-pip install moondream==0.0.4
-```
+~~~bash filename="terminal"
+pip install moondream
+~~~
 
-Download the model from our [Model Downloads](/model-downloads) page.
+Download the model from our [Model Downloads](/model-downloads) page. While compressed models can be loaded directly, we recommend unzipping them first for faster loading times.
 
 ## Basic Usage
 
-```python filename="example.py"
+~~~python filename="example.py"
 from moondream import vl
-model = vl("models/moondream-2b-int8.bin.gz")
+
+# Load unzipped model for faster startup
+model = vl("models/moondream-2b-int8.bin")
 
 # Get coordinates of an object
 coords = model.point(image, "point to the dog")
@@ -23,7 +25,7 @@ print(f"The dog is at coordinates: {coords}")
 # Multiple points
 coords = model.point(image, "point to all the windows")
 print(f"Window coordinates: {coords}")
-```
+~~~
 
 That's all you need to start using visual pointing!
 
