--- a/src/pages/quick-start.mdx
+++ b/src/pages/quick-start.mdx
@@ -50,7 +50,7 @@ Move the downloaded file to your project directory
   <Tabs.Tab>
 ```bash
 # Run this in your project directory
-pip install moondream==0.0.4
+pip install moondream
 ```
   </Tabs.Tab>
   <Tabs.Tab>
@@ -62,7 +62,7 @@ pip install moondream==0.0.4
       - [cuDNN 9.x](https://developer.nvidia.com/cudnn)
 ```bash
 # Run this in your project directory
-pip install moondream-gpu==0.0.4
+pip install moondream-gpu
 ```
   </Tabs.Tab>
 </Tabs>
