--- a/src/pages/local-deployment/getting-started.mdx
+++ b/src/pages/local-deployment/getting-started.mdx
@@ -18,20 +18,27 @@ import { Tabs } from 'nextra/components'
 <Tabs items={['CPU', 'GPU']}>
   <Tabs.Tab>
 ~~~bash
-pip install moondream==0.0.4
+pip install moondream
 ~~~
   </Tabs.Tab>
   <Tabs.Tab>
 ~~~bash
-pip install moondream-gpu==0.0.4
+pip install moondream-gpu
 ~~~
   </Tabs.Tab>
 </Tabs>
 
+### Unzip Model
+~~~bash
+gzip -d models/moondream-2b-int8.bin.gz
+~~~
+
 ### Try It Out
 ~~~python
 from moondream import vl
-model = vl("models/moondream-2b-int8.bin.gz")
+
+# Load unzipped model for faster startup
+model = vl("models/moondream-2b-int8.bin")
 
 answer = model.query(image, "What's in this image?")
 print(answer['answer'])
