--- a/src/pages/cloud/api-reference.mdx
+++ b/src/pages/cloud/api-reference.mdx
@@ -72,7 +72,7 @@ X-Moondream-Auth: your_api_key_here
   <Cards.Card
     icon="🔑"
     title="Get Your API Key"
-    href="https://console.moondream.ai/auth/login"
+    href="https://console.moondream.ai/"
     description="Learn how to obtain and use your Moondream API key"
   />
 </Cards>
