--- a/src/pages/cloud/getting-started.mdx
+++ b/src/pages/cloud/getting-started.mdx
@@ -8,7 +8,7 @@ import { Tabs } from 'nextra/components'
 </Callout>
 
 <Callout type="info">
-  Get your API key from [beta.console.moondream.ai](https://beta.console.moondream.ai)
+  Get your API key from [console.moondream.ai](https://console.moondream.ai)
 </Callout>
 
 ## Installation
