--- a/src/pages/quick-start.mdx
+++ b/src/pages/quick-start.mdx
@@ -1,93 +1,40 @@
----
-title: Quick Start Guide
-description: Get started with Moondream in minutes
----
+import ConfigSelector from '../components/ConfigSelector'
+import { Cards } from 'nextra/components'
 
-import { Callout } from 'nextra/components'
-import { Steps } from 'nextra/components'
-import { Tabs } from 'nextra/components'
+# Quick Start
 
-<Callout type="warning" emoji="🚧">
-  **Alpha Documentation**: This documentation is under active development and some features may be incomplete or subject to change.
-</Callout>
+Get started with Moondream in minutes. Select your configuration below to get the appropriate installation and setup instructions.
 
-<div className="grid grid-cols-1 md:grid-cols-2 gap-8">
-  <div>
-    ## Prerequisites
-    - [Python 3.8+](https://www.python.org/downloads/)
-    - [PIP](https://pip.pypa.io/en/stable/installation/)
+<ConfigSelector />
+
+## Explore Our Cloud Endpoints
+
+<div className="grid grid-cols-1 md:grid-cols-2 gap-6 mt-8">
+  <div className="flex flex-col p-6 bg-white rounded-lg shadow hover:shadow-md transition-shadow">
+    <div className="text-2xl mb-2">💬</div>
+    <h3 className="text-xl font-semibold mb-2">/query</h3>
+    <p className="text-gray-600 mb-4">Ask natural language questions about images and receive detailed answers</p>
+    <a href="/cloud/query" className="text-blue-500 hover:text-blue-600 mt-auto">Learn more →</a>
   </div>
 
-  <div>
-    ## Sample Image
-    <br/>
-    <div className="border rounded-lg max-w-[150px] overflow-hidden">
-      <img 
-        src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4d/Cat_November_2010-1a.jpg/1280px-Cat_November_2010-1a.jpg" 
-        alt="Sample cat image used in quick start code"
-        className="w-full h-auto"
-      />
-    </div>
+  <div className="flex flex-col p-6 bg-white rounded-lg shadow hover:shadow-md transition-shadow">
+    <div className="text-2xl mb-2">📝</div>
+    <h3 className="text-xl font-semibold mb-2">/caption</h3>
+    <p className="text-gray-600 mb-4">Generate accurate and natural image captions</p>
+    <a href="/cloud/caption" className="text-blue-500 hover:text-blue-600 mt-auto">Learn more →</a>
+  </div>
+
+  <div className="flex flex-col p-6 bg-white rounded-lg shadow hover:shadow-md transition-shadow">
+    <div className="text-2xl mb-2">🔍</div>
+    <h3 className="text-xl font-semibold mb-2">/detect</h3>
+    <p className="text-gray-600 mb-4">Detect and locate objects in images</p>
+    <a href="/cloud/detect" className="text-blue-500 hover:text-blue-600 mt-auto">Learn more →</a>
+  </div>
+
+  <div className="flex flex-col p-6 bg-white rounded-lg shadow hover:shadow-md transition-shadow">
+    <div className="text-2xl mb-2">📍</div>
+    <h3 className="text-xl font-semibold mb-2">/point</h3>
+    <p className="text-gray-600 mb-4">Get precise coordinate locations for objects in images</p>
+    <a href="/cloud/point" className="text-blue-500 hover:text-blue-600 mt-auto">Learn more →</a>
   </div>
 </div>
-
-<Steps>
-### Create Project Directory
-Create a new directory for your project
-
-### Download Model
-Download the model by clicking here: [Download Moondream 0.5B INT8](https://huggingface.co/vikhyatk/moondream2/resolve/onnx/moondream-0_5b-int8.mf.gz?download=true)
-
-<Callout type="info">
-  Check out other available models at [Model Downloads](/model-downloads) for different size and performance options.
-</Callout>
-
-### Move Model File
-Move the downloaded file to your project directory
-
-### Install Package
-<Tabs items={['CPU', 'GPU']}>
-  <Tabs.Tab>
-```bash
-# Run this in your project directory
-pip install moondream
-```
-  </Tabs.Tab>
-  <Tabs.Tab>
-  <Callout type="info">
-    PIP library for GPU support coming soon!
-  </Callout>
-  - Prerequisites for GPU support
-      - [CUDA 12.x](https://developer.nvidia.com/cuda-downloads)
-      - [cuDNN 9.x](https://developer.nvidia.com/cudnn)
-```bash
-# Run this in your project directory
-pip install moondream-gpu
-```
-  </Tabs.Tab>
-</Tabs>
-
-### Run Sample Code
-```python
-from moondream import vl
-from PIL import Image
-from urllib.request import urlopen
-
-model = vl('moondream-0_5b-int8.bin.gz')
-
-url = 'https://upload.wikimedia.org/wikipedia/commons/thumb/4/4d/Cat_November_2010-1a.jpg/1280px-Cat_November_2010-1a.jpg'
-image = Image.open(urlopen(url))
-
-for t in model.caption(encoded_image, stream=True)['caption']:
-    print(t, end='', flush=True)
-# optionally, you can use the non-streaming version
-# print(model.caption(encoded_image)['caption'])
-```
-</Steps>
-
-## Next Steps
-
-- Try our [Cloud API](/cloud/getting-started) for a serverless solution
-<Callout>
-  Run into any issues getting setup? Join our [Discord](https://discord.com/invite/tRUdpjDQfH) and share your experience or get help!
-</Callout>
